--- a/example/now.json
+++ b/example/now.json
@@ -2,5 +2,8 @@
   "version": 2,
   "builds": [
     { "src": "index.js", "use": "now-graphql" }
+  ],
+  "routes": [
+    { "src": "/graphql", "dest": "index.js" }
   ]
 }
