--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "apollo-server-express": "latest",
-    "express": "latest"
+    "express": "latest",
+    "graphql": "latest"
   }
 }
